excel report generation

--- a/AlgaehReporting/algaeh_report_tool/templates/testExcel.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/testExcel.hbs
@@ -1,29 +1,30 @@
 <table>
-   <tr>
-      <th>this A</th>
-        <th>this B</th>
-          <th>this C</th>
-   </tr>
-   <tbody>
+<tr>
+  <td>
+   <table>
      <tr>
-    <td>111</td>
-      <td>121</td>
-        <td>131</td>
+      <td> <strong>VAT NO#</strong> </td>
+      <td>301341358100003</td>
      </tr>
      <tr>
-    <td>111</td>
-      <td>121</td>
-        <td>131</td>
+      <td>Company Name</td>
+      <td>MEDGULF</td>
      </tr>
-     <tr>
-    <td>111</td>
-      <td>121</td>
-        <td>131</td>
-     </tr>
-     <tr>
-    <td>111</td>
-      <td>121</td>
-        <td>131</td>
-     </tr>
-   </tbody>
+   <table>
+  </td>
+  <td>
+     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
+  </td>
+</tr>
 </table>
+<hr />
+<table>
+  <tr>
+   <td> <strong>VOT NO#</strong> </td>
+   <td>3013413</td>
+  </tr>
+  <tr>
+   <td>Company Name</td>
+   <td>MEDGULF</td>
+  </tr>
+<table>
