--- a/AlgaehReporting/algaeh_report_tool/templates/cashInvoice.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/cashInvoice.hbs
@@ -6,35 +6,16 @@
         <section>
 
             <table class="tableForLabel" cell-padding="0">
-                <tr>
-                    <td><label>رقم التسجيل الضريبي / TRN</label></td>
-                    <td> <span>{{header.tax_number}}</span></td>
-                    <td><label>النوع / Type</label></td>
-                    <td> <span>ائتمان/ Cash</span></td>
-                </tr>
+                <tr><td><label class="textEnLft">Invoice No</label>:<span class="valueText">{{header.invoice_number}}</span><label class="textArRht">رقم الفاتورة</label></td><td><label class="textEnLft">Invoice Date</label>:<span class="valueText">{{header.invoice_date}}</span><label class="textArRht">اريخ الفاتورة</label></td></tr>
+                 <tr><td><label class="textEnLft">Patient Name</label>:<span class="valueText">{{header.patient_full_name}}</span><label class="textArRht">اسم المريض</label></td><td><label class="textEnLft">Visit Date</label>:<span class="valueText">Show Visit Date here</span><label class="textArRht">تاريخ الزيارة</label></td></tr>
+                <tr><td><label class="textEnLft">MR No</label>:<span class="valueText">{{header.patient_code}}</span><label class="textArRht">رقم التسجيل</label></td><td><label class="textEnLft">Reg. Date</label>:<span class="valueText">{{header.invoice_date}}</span><label class="textArRht">تاريخ التسجيل</label></td></tr>
+                 <tr><td><label class="textEnLft">Insurance Co.</label>:<span class="valueText">{{header.invoice_number}}</span><label class="textArRht">شركة التأمين</label></td><td><label class="textEnLft">Age/Gender</label>:<span class="valueText">{{header.invoice_date}}</span><label class="textArRht">العمر / الجنس</label></td></tr>
+                  <tr><td><label class="textEnLft">Policy/ Class</label>:<span class="valueText">{{header.invoice_number}}</span><label class="textArRht">بوليصة/قاعة</label></td><td><label class="textEnLft">Nationality</label>:<span class="valueText">{{header.invoice_date}}</span><label class="textArRht">جنسية</label></td></tr>
                 <tr>
                     <td colspan="4" style="background:#f2f2f2;height:0px;"></td>
                 </tr>
-                <tr>
-                    <td><label>رقم الملف الطبي / Reg. Number</label></td>
-                    <td> <span>{{header.patient_code}}</span></td>
-                    <td><label>رقم الفاتورة / Invoice No</label></td>
-                    <td> <span>{{header.invoice_number}}</span></td>
-                </tr>
-
-                <tr>
-                    <td><label>اسم المريض / Patient Name</label></td>
-                    <td> <span>{{header.patient_full_name}}</span></td>
-                    <td><label>اريخ الفاتورة / Invoice Date</label></td>
-                    <td> <span>{{header.invoice_date}}</span></td>
-                </tr>
-
-                <tr>
-                    <td><label>اسم الطبيب / Doctor</label></td>
-                    <td> <span>{{header.full_name}}</span></td>
-                    <td><label>Department / القسم</label></td>
-                    <td> <span>{{header.sub_department_name}}</span></td>
-                </tr>
+               <tr><td><label class="textEnLft">Doctor</label>:<span class="valueText">{{header.full_name}}</span><label class="textArRht">طبيب</label></td><td><label class="textEnLft">Department</label>:<span class="valueText">{{header.sub_department_name}}</span><label class="textArRht">قسم</label></td></tr>
+               
             </table>
 
 
@@ -43,33 +24,44 @@
             <table class="tableForData" cell-padding="0">
                 <thead>
                     <tr>
-                        <th>SERVICE DESCRIPTION</th>
-                        <th>QUANTITY</th>
-                        <th>PRICE</th>
-                        <th>NET AMOUNT</th>
-                        <th>PATIENT RESP.</th>
-                        <th>PATIENT TAX</th>
-                        <th>PATIENT PAYABLE</th>
+                        <th>Service Code<p>رمز الخدمة</p></th>
+                        <th>Service Desc.<p>وصف الخدمة</p></th>
+                        <th>Gross Amount<p>المبلغ الإجمالي</p></th>
+                        <th>Discount<p>خصم</p></th>
+                        <th>Net Amt. <p>المبلغ الصافي</p></th>
+                        <th>Vat Amt. <p>قيمة الضريبة</p></th>
+                        <th>Net/Claim Amt.<p>صافي / مبلغ المطالبة
+</p></th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each detail}}
                     <tr>
-                        <td colspan="9" class="tableSubHdg">{{service_type}}</td>
+                         <td colspan="11" class="tableSubHdg">{{service_type}}/{{arabic_service_type}}</td>
                     </tr>
                     <tr>
+                        <td>{{service_code}}</td>
                         <td>{{service_name}}</td>
+                          <td class="numberFld">{{price}}</td>
                         <td>{{quantity}}</td>
-                        <td>{{price}}</td>
-                        <td>{{net_amount}}</td>
-                        <td>{{patient_resp}}</td>
-                        <td>{{patient_tax}}</td>
-                        <td>{{patient_payable}}</td>
+                        <td class="numberFld">{{net_amount}}</td>
+                        <td class="numberFld">{{net_amount}}</td>
+                          <td class="numberFld">{{patient_payable}}</td>
+                          <td class="numberFld">{{patient_payable}}</td>
                     </tr>
                     {{/each}}
+                      <tr class="footerTotal">  <td colspan="4"><span style="text-align:right">Total</span></td>
+                          <td class="numberFld">0.00</td>
+                         <td class="numberFld">0.00</td>
+                          <td class="numberFld">0.00</td>
+                          <td class="numberFld">0.00</td>
+                          <td class="numberFld">0.00</td>
+                          <td class="numberFld">0.00</td>
+                          <td class="numberFld">0.00</td>
+                    </tr>
                 </tbody>
             </table>
         </section>
-        <footer>{{{loadPage 'doctor_signature_footer.hbs' header}}}</footer>
+        {{!-- <footer>{{{loadPage 'doctor_signature_footer.hbs' header}}}</footer> --}}
     </div>
 </body>
