--- a/AlgaehReporting/algaeh_report_tool/templates/prevalidation.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/prevalidation.hbs
@@ -44,7 +44,7 @@
         {{visit_code}}
       </td>
       <td>
-        {{patient_name}}
+        {{capitalization patient_name}}
       </td>
 
       <td>
