--- a/AlgaehReporting/algaeh_report_tool/templates/cashInvoice.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/cashInvoice.hbs
@@ -4,14 +4,16 @@
     <div class="print-body">
 
         <section>
-
             <table class="tableForLabel" cell-padding="0">
+            <tr><td colspan="4"><label class="textEnLft">TRN No.</label>:<span class="valueText">{{header.tax_number}}</span><label class="textArRht">رقم تسجيل ضريبة القيمة المضافة </label></td></tr>
+                 
+ <tr>
+                    <td colspan="4" style="background:#f2f2f2;height:0px;"></td>
+                </tr>
                 <tr><td><label class="textEnLft">Invoice No</label>:<span class="valueText">{{header.invoice_number}}</span><label class="textArRht">رقم الفاتورة</label></td><td><label class="textEnLft">Invoice Date</label>:<span class="valueText">{{header.invoice_date}}</span><label class="textArRht">اريخ الفاتورة</label></td></tr>
                  <tr><td><label class="textEnLft">Patient Name</label>:<span class="valueText">{{header.patient_full_name}}</span><label class="textArRht">اسم المريض</label></td><td><label class="textEnLft">Visit Date</label>:<span class="valueText">Show Visit Date here</span><label class="textArRht">تاريخ الزيارة</label></td></tr>
                 <tr><td><label class="textEnLft">MR No</label>:<span class="valueText">{{header.patient_code}}</span><label class="textArRht">رقم التسجيل</label></td><td><label class="textEnLft">Reg. Date</label>:<span class="valueText">{{header.invoice_date}}</span><label class="textArRht">تاريخ التسجيل</label></td></tr>
-                 <tr><td><label class="textEnLft">Insurance Co.</label>:<span class="valueText">{{header.invoice_number}}</span><label class="textArRht">شركة التأمين</label></td><td><label class="textEnLft">Age/Gender</label>:<span class="valueText">{{header.invoice_date}}</span><label class="textArRht">العمر / الجنس</label></td></tr>
-                  <tr><td><label class="textEnLft">Policy/ Class</label>:<span class="valueText">{{header.invoice_number}}</span><label class="textArRht">بوليصة/قاعة</label></td><td><label class="textEnLft">Nationality</label>:<span class="valueText">{{header.invoice_date}}</span><label class="textArRht">جنسية</label></td></tr>
-                <tr>
+                 <tr>
                     <td colspan="4" style="background:#f2f2f2;height:0px;"></td>
                 </tr>
                <tr><td><label class="textEnLft">Doctor</label>:<span class="valueText">{{header.full_name}}</span><label class="textArRht">طبيب</label></td><td><label class="textEnLft">Department</label>:<span class="valueText">{{header.sub_department_name}}</span><label class="textArRht">قسم</label></td></tr>
@@ -30,14 +32,13 @@
                         <th>Discount<p>خصم</p></th>
                         <th>Net Amt. <p>المبلغ الصافي</p></th>
                         <th>Vat Amt. <p>قيمة الضريبة</p></th>
-                        <th>Net/Claim Amt.<p>صافي / مبلغ المطالبة
-</p></th>
+                        <th>Amount<p>صافي / مبلغ المطالبة</p></th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each detail}}
                     <tr>
-                         <td colspan="11" class="tableSubHdg">{{service_type}}/{{arabic_service_type}}</td>
+                         <td colspan="7" class="tableSubHdg">{{service_type}}/{{arabic_service_type}}</td>
                     </tr>
                     <tr>
                         <td>{{service_code}}</td>
@@ -47,16 +48,16 @@
                         <td class="numberFld">{{net_amount}}</td>
                         <td class="numberFld">{{net_amount}}</td>
                           <td class="numberFld">{{patient_payable}}</td>
-                          <td class="numberFld">{{patient_payable}}</td>
                     </tr>
                     {{/each}}
-                      <tr class="footerTotal">  <td colspan="4"><span style="text-align:right">Total</span></td>
-                          <td class="numberFld">0.00</td>
-                         <td class="numberFld">0.00</td>
+                      <tr class="footerTotalUp">  <td colspan="2" class="numberFld"><span style="text-align:right">Total / مجموع</span></td>
                           <td class="numberFld">0.00</td>
                           <td class="numberFld">0.00</td>
                           <td class="numberFld">0.00</td>
                           <td class="numberFld">0.00</td>
+                          <td class="numberFld">0.00</td>
+                    </tr>
+                    <tr class="footerTotalDown">  <td colspan="6" class="numberFld"><span style="text-align:right">Net Total / المجموع الصافي</span></td>
                           <td class="numberFld">0.00</td>
                     </tr>
                 </tbody>
