--- a/AlgaehReporting/algaeh_report_tool/templates/creditInvoice.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/creditInvoice.hbs
@@ -109,7 +109,7 @@
                           <td class="numberFld">{{patient_payable}}</td>
                     </tr>
                     {{/each}}
-  <tr class="footerTotal">  <td colspan="4"><span style="text-align:right">Total</span></td>
+  <tr class="footerTotal">  <td colspan="4" class="numberFld"><span style="text-align:right">Total</span></td>
                           <td class="numberFld">0.00</td>
                          <td class="numberFld">0.00</td>
                           <td class="numberFld">0.00</td>
